# OpenGL-Practise

./: CMakeLists.txt
resources/shaders/: Basic.shader
src/: main.cpp
src/IndexBuffer/: IndexBuffer.cpp  IndexBuffer.h
src/Renderer/: Renderer.cpp  Renderer.h
src/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
